tests/miniJava/neg/001571_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new String [ 0 ] ; } }
